<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hint_enter_city">Enter City</string>
    <string name="str_search">Search</string>
    <string name="str_wind_speed">Wind Speed</string>
    <string name="str_pressure">Pressure</string>
    <string name="str_sunrise">Sunrise</string>
    <string name="str_sunset">Sunset</string>
    <string name="str_feels_like">Feel Like</string>
    <string name="str_humidity">Humidity</string>


</resources>